# mobile_base_arm_ws

./: Dockerfile  README.md
src/: 3rdparty.repos
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: my_arm.ros2_control.xacro  my_arm.srdf  my_arm.urdf.xacro  ros2_controllers.yaml
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: gazebo_bridge.yaml
src/my_robot_bringup/launch/: gazebo.launch.py  platform.launch.py
src/my_robot_bringup/rviz/: gazebo.rviz
src/my_robot_bringup/worlds/: empty.sdf  warehouse.sdf
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/rviz/: robot_display.rviz
src/my_robot_description/urdf/: arm.urdf  arm.urdf.xacro  arm_with_gripper.urdf.xacro  gripper.urdf.xacro  inertia.urdf.xacro  mobile_base.urdf.xacro  mtl.urdf.xacro  platform.gazebo  platform.ros2_control.urdf.xacro  platform.urdf.xacro  platform.xacro  robot.urdf.xacro
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  my_arm.ros2_control.xacro  my_arm.srdf  my_arm.urdf.xacro  ros2_controllers.yaml
src/my_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  (+3 more)
src/platform_bt/: CMakeLists.txt  package.xml  tree_nodes.xml
src/platform_bt/behavior_trees/: pick_place.xml
src/platform_bt/config/: bt_executor_params.yaml
src/platform_bt/include/platform_bt/: bt_exec_server.hpp  pub_cmd_vel.hpp
src/platform_bt/launch/: bt_executor.launch.py
src/platform_bt/src/: bt_executor.cpp  pub_cmd_vel.cpp
src/platform_movit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+18 files in other folders)
